2005-07-25  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/__init__.py (__version__): upping version for beta1.

	* tests/test_base.py (test_unique5): renamed test, which shared
	name with another.

2005-07-22  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: adding note about table name guessing and
	inheritance. 

	* tests/test_base.py (test_inheritance2): checking that base
	classes are being processed by the metaclass in the right order.

	* src/pydo/base.py (_metapydo.__init__): new table name
	inheritance semantics (proposed by Hamish Lawson).

	* tests/test_base.py (test_guess_tablename1): test implementation
	of new table name inheritance semantics.

2005-07-21  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._uniqueWhere): tighter error handling for
	unique constraints -- raise ValueError if a NULL is passed to
	getUnique() or similar methods.  This ensures that meaningless SQL
	won't be generated (WHERE x=NULL) and gives a clearer error
	message. 

2005-07-17  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/psycopgconn.py: added support for new module
	name for psycopg2 ("psycopg2" as of 2.0b4).

2005-07-16  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document _ignore_update_rowcount.

	* src/pydo/base.py (PyDO): adding _ignore_update_rowcount
	attribute so that if the driver doesn't return a correct rowcount
	-- for instance, for an updateable view, as I've seen with
	postgres -- update can still be made to work.

	* tests/test_base.py (test_update2): update test with out-of-sync
	object.

	* src/pydo/base.py (PyDO._update_raw): fail if update doesn't
	affect one row.

	* tests/test_base.py (test_unique4): test that all information
	passed to getUnique is used (related to discussion of berlios bug
	#4530).

2005-07-08  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: at a user's request, adding a mention to the
	manual that PyDO requires Python 2.4.  (berlios bug #4472)
